--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>  
         <center>
         <canvas id="webgl"></canvas>
-        <script type="text/javascript" src="ld46.js"></script>
+        <script type="text/javascript" src="js/ld46.js"></script>
         </center>
     </body>
 </html>
